[test] Tox: ignore coveralls error, show coverage

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,8 @@ commands=
     rm -rf ./yala.egg-info/
     coverage run setup.py test
     yala {posargs:yala}
-    coveralls
+    -coveralls
+    coverage report
 deps=
     coverage
     coveralls
