[minor] Improve test coverage

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,2 +1,8 @@
 [run]
 source = yala
+branch = True
+
+[report]
+exclude_lines=
+    # Don't complain if tests don't hit defensive assertion code:
+    raise NotImplementedError
