Disable pylint duplicate code detection
It was breaking the parser

--- a/yala/setup.cfg
+++ b/yala/setup.cfg
@@ -1,5 +1,5 @@
 [yala]
 isort args = --recursive --check
-pylint args = --msg-template="{path}:{msg} ({msg_id}, {symbol}):{line}:{column}"
+pylint args = --msg-template="{path}:{msg} ({msg_id}, {symbol}):{line}:{column}" --disable=duplicate-code
 radon cc args = --min D
 radon mi args = --min D
