Create folder for test data

--- a/tox.ini
+++ b/tox.ini
@@ -5,8 +5,7 @@ commands=
     ; Force packaging even if setup.{py,cfg} haven't changed
     rm -rf ./yala.egg-info/
     coverage run setup.py test
-    isort --diff yala/main.py
-    yala {posargs:yala}
+    yala setup.py yala tests
     -coveralls
     coverage report
 deps=
