--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: python
-python: "3.6"
-install: "pip install -r requirements/dev.txt"
-script: "tox yala tests/__init__.py tests/*.py setup.py"
+python: 3.6
+install: pip install -r requirements/dev.txt
+script: tox
