Add linters and CIs

--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,13 @@ commands=
     rm -rf ./yala.egg-info/
     coverage run setup.py test
     yala setup.py yala tests
-    -coveralls
+    ; Commented-out code
+    eradicate -r yala tests
+    ; Security issues
+    bandit --skip B404 -r yala
+    ; Security issues in dependencies
+    safety check
+    rstcheck README.rst
     coverage report
 deps=
     -rrequirements/dev.txt
-    coveralls
