Make mypy optional, refactoring

--- a/.coveragerc
+++ b/.coveragerc
@@ -6,3 +6,4 @@ branch = True
 exclude_lines=
     # Don't complain if tests don't hit defensive assertion code:
     raise NotImplementedError
+    pragma: no cover
