--- a/yala/logging.ini
+++ b/yala/logging.ini
@@ -12,14 +12,14 @@ level=WARN
 handlers=consoleHandler
 
 [logger_yala]
-level=INFO
+level=WARN
 qualname=yala
 handlers=consoleHandler
 propagate=0
 
 [handler_consoleHandler]
 class=StreamHandler
-level=INFO
+level=WARN
 formatter=simpleFormatter
 args=(sys.stderr,)
 
