--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,11 @@
 envlist = py35,py36
 
 [testenv]
-passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
 whitelist_externals = rm
+deps=
+    -rrequirements/dev.txt
+
+[testenv:py36]
 commands=
     ; Force packaging even if setup.{py,cfg} haven't changed
     rm -rf ./yala.egg-info/
@@ -17,5 +20,8 @@ commands=
     safety check
     rstcheck README.rst
     coverage report
-deps=
-    -rrequirements/dev.txt
+
+[testenv:py35]
+commands=
+    rm -rf ./yala.egg-info/
+    python setup.py test
