Update dev dependencies; use only pipenv

--- a/tox.ini
+++ b/tox.ini
@@ -3,25 +3,26 @@ envlist = py35,py36
 
 [testenv]
 whitelist_externals = rm
-deps=
-    -rrequirements/dev.txt
+deps = pipenv
 
 [testenv:py36]
 commands=
     ; Force packaging even if setup.{py,cfg} haven't changed
     rm -rf ./yala.egg-info/
-    coverage run setup.py test
-    yala setup.py yala tests
+    pipenv install --dev
+    pipenv run coverage run setup.py test
+    pipenv run yala setup.py yala tests
     ; Commented-out code
-    eradicate -r yala tests
+    pipenv run eradicate -r yala tests
     ; Security issues
-    bandit --skip B404 -r yala
+    pipenv run bandit --skip B404 -r yala
     ; Security issues in dependencies
-    safety check
-    rstcheck README.rst
-    coverage report
+    pipenv run safety check
+    pipenv run rstcheck README.rst
+    pipenv run coverage report
 
 [testenv:py35]
 commands=
     rm -rf ./yala.egg-info/
-    python setup.py test
+    pipenv install --dev
+    pipenv run python setup.py test
