Make flake8 optional
Due to 4-month-old https://gitlab.com/pycqa/flake8/issues/415

--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,6 @@ isort = "*"
 pycodestyle = "*"
 pydocstyle = "*"
 pylint = "*"
-radon = "*"
 
 [dev-packages]
 bandit = "*"
@@ -20,3 +19,7 @@ rstcheck = "*"
 safety = "*"
 tox = "*"
 nose = "*"
+yala = {editable = true, path = "."}
+
+[requires]
+python_version = "3.5"
