--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ isort = "*"
 pycodestyle = "*"
 pydocstyle = "*"
 pylint = "*"
+radon = "*"
 
 [dev-packages]
 bandit = "*"
@@ -19,7 +20,7 @@ rstcheck = "*"
 safety = "*"
 tox = "*"
 nose = "*"
-yala = {editable = true, path = "."}
+yala = {path = ".",editable = true}
 
 [requires]
 python_version = "3.5"
