Add py37 in tox, in parallel

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,12 @@
 [tox]
-envlist = py35,py36
+envlist = py35,py36,py37
 
 [testenv]
 whitelist_externals = rm
 deps = pipenv
 
-[testenv:py36]
+[testenv:py37]
+parallel_show_output = True
 commands=
     ; Force packaging even if setup.{py,cfg} haven't changed
     rm -rf ./yala.egg-info/
@@ -20,6 +21,12 @@ commands=
     pipenv run safety check
     pipenv run rstcheck README.rst
     pipenv run coverage report
+
+[testenv:py36]
+commands=
+    rm -rf ./yala.egg-info/
+    pipenv install --dev
+    pipenv run python setup.py test
 
 [testenv:py35]
 commands=
