Use pip to download latest dependencies in tests

--- a/tox.ini
+++ b/tox.ini
@@ -1,35 +1,38 @@
 [tox]
 envlist = py35,py36,py37
+skip_missing_interpreters = true
 
 [testenv]
 whitelist_externals = rm
-deps = pipenv
 
 [testenv:py37]
-parallel_show_output = True
+parallel_show_output = true
 commands=
     ; Force packaging even if setup.{py,cfg} haven't changed
     rm -rf ./yala.egg-info/
-    pipenv install --dev
-    pipenv run coverage run setup.py test
-    pipenv run yala setup.py yala tests
+    pip install -U pip
+    pip install -U .[all,dev]
+    coverage run setup.py test
+    yala setup.py yala tests
     ; Commented-out code
-    pipenv run eradicate -r yala tests
+    eradicate -r yala tests
     ; Security issues
-    pipenv run bandit --skip B404 -r yala
+    bandit --skip B404 -r yala
     ; Security issues in dependencies
-    pipenv run safety check
-    pipenv run rstcheck README.rst
-    pipenv run coverage report
+    safety check
+    rstcheck README.rst
+    coverage report
 
 [testenv:py36]
 commands=
     rm -rf ./yala.egg-info/
-    pipenv install --dev
-    pipenv run python setup.py test
+    pip install -U pip
+    pip install -U .[all,dev]
+    python setup.py test
 
 [testenv:py35]
 commands=
     rm -rf ./yala.egg-info/
-    pipenv install --dev
-    pipenv run python setup.py test
+    pip install -U pip
+    pip install -U .[all,dev]
+    python setup.py test
