--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,7 @@ branches:
     - dev
     - master
 install:
-  - pip install -U pip
   - pip install -U tox
-cache:
-  directories:
-    - /home/travis/.cache/pip
-    - /home/travis/.cache/pipenv
+cache: pip
 script:
   - tox
