Upload code analysis in CI

--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,22 @@ commands=
     rstcheck README.rst
     coverage report
 
+[testenv:up_analysis]
+; py37 runs coverage
+depends = py37
+parallel_show_output = true
+deps=
+    coveralls
+    codecov
+    codeclimate-test-reporter
+    codacy-coverage
+commands=
+    coverage xml
+    coveralls
+    codecov
+    codeclimate-test-reporter
+    python-codacy-coverage -r coverage.xml
+
 [testenv:py36]
 commands=
     rm -rf ./yala.egg-info/
