--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
 matrix:
   include:
     - python: 3.7
-      env: TOXENV=py37
+      env: TOXENV=py37,up_analysis
     - python: 3.6
       env: TOXENV=py36
     - python: 3.5
