Add env vars to tox

--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,11 @@ commands=
 ; py37 runs coverage
 depends = py37
 parallel_show_output = true
+passenv=
+    CODECOV_TOKEN
+    CODACY_PROJECT_TOKEN
+    CODECLIMATE_REPO_TOKEN
+    COVERALLS_REPO_TOKEN
 deps=
     coveralls
     codecov
