Remove codeclimate integration
Codeclimate requires coverage < 4.4 due to a 2.5-year old bug:
https://github.com/nedbat/coveragepy/issues/578

--- a/tox.ini
+++ b/tox.ini
@@ -30,18 +30,16 @@ parallel_show_output = true
 passenv=
     CODECOV_TOKEN
     CODACY_PROJECT_TOKEN
-    CODECLIMATE_REPO_TOKEN
-    COVERALLS_REPO_TOKEN
+    TRAVIS
+    TRAVIS_*
 deps=
     coveralls
     codecov
-    codeclimate-test-reporter
     codacy-coverage
 commands=
     coverage xml
     coveralls
     codecov
-    codeclimate-test-reporter
     python-codacy-coverage -r coverage.xml
 
 [testenv:py36]
