--- a/yala/logging.ini
+++ b/yala/logging.ini
@@ -8,18 +8,18 @@ keys=consoleHandler
 keys=simpleFormatter
 
 [logger_root]
-level=WARN
+level=INFO
 handlers=consoleHandler
 
 [logger_yala]
-level=WARN
+level=INFO
 qualname=yala
 handlers=consoleHandler
 propagate=0
 
 [handler_consoleHandler]
 class=StreamHandler
-level=WARN
+level=INFO
 formatter=simpleFormatter
 args=(sys.stderr,)
 
