--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,10 @@ script:
   - tox
 matrix:
   include:
+    - python: 3.8
+      env: TOXENV=py38,up_analysis
     - python: 3.7
-      env: TOXENV=py37,up_analysis
+      env: TOXENV=py37
     - python: 3.6
       env: TOXENV=py36
     - python: 3.5
