Add support for multiline linter results
- Fix: multiline results in pylint were not being captured, e.g.
bad-whitespace and bad-continuation

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,12 @@
 [tox]
-envlist = py35,py36,py37
+envlist = py35,py36,py37,py38
 skip_missing_interpreters = true
 
 [testenv]
 whitelist_externals = rm
 
-[testenv:py37]
+[testenv:py38]
+; Code checks and linters are run in the latest Python version only.
 parallel_show_output = true
 commands=
     ; Force packaging even if setup.{py,cfg} haven't changed
@@ -24,8 +25,8 @@ commands=
     coverage report
 
 [testenv:up_analysis]
-; py37 runs coverage
-depends = py37
+; Upload coverage data
+depends = py38
 parallel_show_output = true
 passenv=
     CODECOV_TOKEN
@@ -41,6 +42,13 @@ commands=
     coveralls
     codecov
     python-codacy-coverage -r coverage.xml
+
+[testenv:py37]
+commands=
+    rm -rf ./yala.egg-info/
+    pip install -U pip
+    pip install -U .[all,dev]
+    python setup.py test
 
 [testenv:py36]
 commands=
