Simplify tox file

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,13 @@ skip_missing_interpreters = true
 [testenv]
 whitelist_externals = rm
 
+[testenv:py{35,36,37}]
+commands=
+    rm -rf ./yala.egg-info/
+    pip install -U pip
+    pip install -U .[all,dev]
+    python setup.py test
+
 [testenv:py38]
 ; Code checks and linters are run in the latest Python version only.
 parallel_show_output = true
@@ -42,24 +49,3 @@ commands=
     coveralls
     codecov
     python-codacy-coverage -r coverage.xml
-
-[testenv:py37]
-commands=
-    rm -rf ./yala.egg-info/
-    pip install -U pip
-    pip install -U .[all,dev]
-    python setup.py test
-
-[testenv:py36]
-commands=
-    rm -rf ./yala.egg-info/
-    pip install -U pip
-    pip install -U .[all,dev]
-    python setup.py test
-
-[testenv:py35]
-commands=
-    rm -rf ./yala.egg-info/
-    pip install -U pip
-    pip install -U .[all,dev]
-    python setup.py test
