--- a/yala/setup.cfg
+++ b/yala/setup.cfg
@@ -1,5 +1,5 @@
 [yala]
 isort args = --check
-pylint args = --msg-template="{path}:{msg} ({msg_id}, {symbol}):{line}:{column}" --disable=duplicate-code
+pylint args = --msg-template="{path}:{msg} ({msg_id}, {symbol}):{line}:{column}"
 radon cc args = --min D
 radon mi args = --min D
