--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,14 @@
 [tox]
-envlist = py35,py36,py37,py38
+envlist = py36,py37,py38
 skip_missing_interpreters = true
 
 [testenv]
 whitelist_externals = rm
 
-[testenv:py{35,36,37}]
+[testenv:py{36,37}]
 commands=
     rm -rf ./yala.egg-info/
-    pip install -U pip
-    pip install -U .[all,dev]
+    pip install -U .[all,flake8]
     python setup.py test
 
 [testenv:py38]
@@ -18,8 +17,7 @@ parallel_show_output = true
 commands=
     ; Force packaging even if setup.{py,cfg} haven't changed
     rm -rf ./yala.egg-info/
-    pip install -U pip
-    pip install -U .[all,dev]
+    pip install -U .[all,flake8,dev]
     coverage run setup.py test
     yala setup.py yala tests
     ; Commented-out code
