Ignore coveralls failure. It is broken right now.

--- a/tox.ini
+++ b/tox.ini
@@ -44,6 +44,6 @@ deps=
     codacy-coverage
 commands=
     coverage xml
-    coveralls
+    -coveralls
     codecov
     python-codacy-coverage -r coverage.xml
