--- a/yala/setup.cfg
+++ b/yala/setup.cfg
@@ -1,5 +1,13 @@
 [yala]
-isort args = --check
+isort args = --check --profile black
 pylint args = --msg-template="{path}:{msg} ({msg_id}, {symbol}):{line}:{column}"
 radon cc args = --min D
 radon mi args = --min D
+
+# if you're using black with default config and pycodestyle and flake8:
+
+# [pycodestyle]
+# max-line-length = 88
+#
+# [flake8]
+# max-line-length = 88
