--- a/yala/setup.cfg
+++ b/yala/setup.cfg
@@ -1,13 +1,16 @@
 [yala]
-isort args = --check --profile black
+isort args = --check
 pylint args = --msg-template="{path}:{msg} ({msg_id}, {symbol}):{line}:{column}"
 radon cc args = --min D
 radon mi args = --min D
 
-# if you're using black with default config and pycodestyle and flake8:
+# if you're using black with isort, pycodestyle and flake8, make sure to set options that won't conflict, for example:
+
+# [isort]
+# profile=black
 
 # [pycodestyle]
 # max-line-length = 88
-#
+
 # [flake8]
 # max-line-length = 88
