--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,17 @@
 [tox]
-envlist = py36,py37,py38
+envlist = py36,py37,py38,py39
 skip_missing_interpreters = true
 
 [testenv]
 whitelist_externals = rm
 
-[testenv:py{36,37}]
+[testenv:py{36,37,38}]
 commands=
     rm -rf ./yala.egg-info/
     pip install -U .[all,flake8]
     python setup.py test
 
-[testenv:py38]
+[testenv:py39]
 ; Code checks and linters are run in the latest Python version only.
 parallel_show_output = true
 commands=
@@ -31,7 +31,7 @@ commands=
 
 [testenv:up_analysis]
 ; Upload coverage data
-depends = py38
+depends = py39
 parallel_show_output = true
 passenv=
     CODECOV_TOKEN
