Add GitHub Actions

--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,17 @@
 [tox]
-envlist = py36,py37,py38,py39
+envlist = 3.6,3.7,3.8,3.9,3.10
 skip_missing_interpreters = true
 
 [testenv]
 whitelist_externals = rm
 
-[testenv:py{36,37,38}]
+[testenv:{3.6,3.7,3.8,3.10}]
 commands=
     rm -rf ./yala.egg-info/
     pip install -U .[all,flake8]
     python setup.py test
 
-[testenv:py39]
+[testenv:3.9]
 ; Code checks and linters are run in the latest Python version only.
 parallel_show_output = true
 commands=
@@ -31,7 +31,7 @@ commands=
 
 [testenv:up_analysis]
 ; Upload coverage data
-depends = py39
+depends = 3.9
 parallel_show_output = true
 passenv=
     CODECOV_TOKEN
