--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,6 @@
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master, dev ]
   pull_request:
@@ -11,17 +9,14 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   tox:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        # Without quotes, 3.10 becomes 3.1
         python-version: [3.6, 3.7, 3.8, '3.10']
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
@@ -30,6 +25,14 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+
+      - name: Cache pip packages
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cache/pip
+            ~/.local/share/virtualenv
+          key: ${{ matrix.python-version }}-${{ hashFiles('Pipfile.lock') }}
 
       - name: Install tox
         run: pip install -U tox
