--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = 3.6,3.7,3.8,3.9,3.10
+envlist = 3.6,3.7,3.8,3.9,3.10,collect_reports
 skip_missing_interpreters = true
 
 [testenv]
@@ -7,13 +7,23 @@ whitelist_externals = rm
 
 [testenv:{3.6,3.7,3.8,3.10}]
 commands=
+    ; Force packaging even if setup.{py,cfg} haven't changed
     rm -rf ./yala.egg-info/
     pip install -U .[all,flake8]
     python setup.py test
 
 [testenv:3.9]
-; Code checks and linters are run in the latest Python version only.
+; Code checks and linters are run in the latest stable Python version only.
+depends = collect_reports
 parallel_show_output = true
+passenv=
+    CODACY_PROJECT_TOKEN
+    CODECOV_TOKEN
+    COVERALLS_REPO_TOKEN
+deps=
+    coveralls
+    codecov
+    codacy-coverage
 commands=
     ; Force packaging even if setup.{py,cfg} haven't changed
     rm -rf ./yala.egg-info/
@@ -29,20 +39,6 @@ commands=
     rstcheck README.rst
     coverage report
 
-[testenv:up_analysis]
-; Upload coverage data
-depends = 3.9
-parallel_show_output = true
-passenv=
-    CODECOV_TOKEN
-    CODACY_PROJECT_TOKEN
-    TRAVIS
-    TRAVIS_*
-deps=
-    coveralls
-    codecov
-    codacy-coverage
-commands=
     coverage xml
     -coveralls
     codecov
