Coveralls can fail tox

--- a/tox.ini
+++ b/tox.ini
@@ -40,6 +40,6 @@ commands=
     coverage report
 
     coverage xml
-    -coveralls
+    coveralls
     codecov
     python-codacy-coverage -r coverage.xml
