Remove black from "all" target
- Avoid breaking current checks, so we don't need to increase the major
  version;
- Avoid forcing the user to deal with conflicting errors between black
  and pycodestyle, isort.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
           path: |
             ~/.cache/pip
             ~/.local/share/virtualenv
-          key: ${{ matrix.python-version }}-${{ hashFiles('Pipfile.lock') }}
+          key: ${{ matrix.python-version }}-${{ hashFiles('Pipfile.lock', 'tox.ini') }}
 
       - name: Install tox
         run: pip install -U tox
