--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ whitelist_externals = rm
 commands=
     ; Force packaging even if setup.{py,cfg} haven't changed
     rm -rf ./yala.egg-info/
-    pip install -U .[all,flake8]
+    pip install -U .[all,black,flake8]
     python setup.py test
 
 [testenv:3.9]
@@ -27,7 +27,7 @@ deps=
 commands=
     ; Force packaging even if setup.{py,cfg} haven't changed
     rm -rf ./yala.egg-info/
-    pip install -U .[all,flake8,dev]
+    pip install -U .[all,black,flake8,dev]
     coverage run setup.py test
     yala setup.py yala tests
     ; Commented-out code
