Skip upload when tox runs locally

--- a/tox.ini
+++ b/tox.ini
@@ -1,29 +1,17 @@
 [tox]
-envlist = 3.6,3.7,3.8,3.9,3.10,collect_reports
+envlist = py36,py37,py38,py39,py310
 skip_missing_interpreters = true
 
 [testenv]
 whitelist_externals = rm
-
-[testenv:{3.6,3.7,3.8,3.10}]
 commands=
     ; Force packaging even if setup.{py,cfg} haven't changed
     rm -rf ./yala.egg-info/
     pip install -U .[all,black,flake8]
     python setup.py test
 
-[testenv:3.9]
+[testenv:lint]
 ; Code checks and linters are run in the latest stable Python version only.
-depends = collect_reports
-parallel_show_output = true
-passenv=
-    CODACY_PROJECT_TOKEN
-    CODECOV_TOKEN
-    COVERALLS_REPO_TOKEN
-deps=
-    coveralls
-    codecov
-    codacy-coverage
 commands=
     ; Force packaging even if setup.{py,cfg} haven't changed
     rm -rf ./yala.egg-info/
@@ -39,6 +27,17 @@ commands=
     rstcheck README.rst
     coverage report
 
+[testenv:upload]
+depends = lint
+passenv=
+    CODACY_PROJECT_TOKEN
+    CODECOV_TOKEN
+    COVERALLS_REPO_TOKEN
+deps=
+    coveralls
+    codecov
+    codacy-coverage
+commands=
     coverage xml
     coveralls
     codecov
