--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
-envlist = py36,py37,py38,py39,py310
+envlist = py37,py38,py39,py310,py311
 skip_missing_interpreters = true
 
 [testenv]
-whitelist_externals = rm
+allowlist_externals = rm
 commands=
     ; Force packaging even if setup.{py,cfg} haven't changed
     rm -rf ./yala.egg-info/
